# telepathy-durka

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  ROADMAP  autogen.sh  configure.ac  meson.build  meson_options.txt  telepathy-durka.spec
data/: Makefile.am  durka.manager  meson.build  org.freedesktop.Telepathy.ConnectionManager.durka.service  org.freedesktop.Telepathy.ConnectionManager.durka.service.in
m4/: Makefile.am
src/: Makefile.am  config.h.in  conn-contact-info.c  conn-contact-info.h  conn.c  conn.h  connection-manager.c  connection-manager.h  contact-list.c  contact-list.h  durka-connection-manager.c  durka-connection-manager.h  durka-connection.c  durka-connection.h  durka-contact-list.c  durka-contact-list.h  durka-main.c  durka-protocol.c  durka-protocol.h  durka.c  json.c  json.h  main.c  meson.build  protocol.c  protocol.h
